# rpi-fan-ctrl

./: .ccls  .gitignore  Makefile  README.md  main.c  meson.build  rpi3-cross.txt
src/: client.c  client.h  gpio_pin.h  server.c  server.h  unix_socket.c  unix_socket.h  utils.c  utils.h
